versioned_docs/version-4.0/client-api/data-subscriptions/advanced-topics/maintenance-operations.mdx
---
title: "Data Subscriptions: Maintenance Operations"
hide_table_of_contents: true
sidebar_label: Maintenance Operations
sidebar_position: 1
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "java"];


# Data Subscriptions: Maintenance Operations
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">

<Admonition type="note" title="Note">

This page covers data subscriptions maintenance operations:  

[Deletion](../../../client-api/data-subscriptions/advanced-topics/maintenance-operations.mdx#deletion)  
[Dropping Connection](../../../client-api/data-subscriptions/advanced-topics/maintenance-operations.mdx#dropping-connection)  
[Disabling subscription](../../../client-api/data-subscriptions/advanced-topics/maintenance-operations.mdx#disabling-subscription)  
[Updating subscription](../../../client-api/data-subscriptions/advanced-topics/maintenance-operations.mdx#updating-subscription)  
[Getting subscription status](../../../client-api/data-subscriptions/advanced-topics/maintenance-operations.mdx#getting-subscription-status)  
[DocumentSubscriptions class](../../../client-api/data-subscriptions/advanced-topics/maintenance-operations.mdx#documentsubscriptions-class)  

</Admonition>
## Deletion
Subscriptions can be entirely deleted from the system.  

This operation can be very useful in ad-hoc subscription scenarios when a lot of subscriptions tasks information may accumulate, making tasks management very hard.  

<TabItem value="interface_subscription_deletion" label="interface_subscription_deletion">
<CodeBlock language="csharp">
{`void Delete(string name, string database = null);
Task DeleteAsync(string name, string database = null, CancellationToken token = default);
`}
</CodeBlock>
</TabItem>

usage: 

<TabItem value="subscription_deletion" label="subscription_deletion">
<CodeBlock language="csharp">
{`store.Subscriptions.Delete(subscriptionName);
`}
</CodeBlock>
</TabItem>


    
## Dropping connection

Subscription connections with workers can be dropped remotely.  
A dropped worker will not try to reconnect to the server.

<TabItem value="interface_subscription_dropping" label="interface_subscription_dropping">
<CodeBlock language="csharp">
{`void DropConnection(string name, string database = null);
Task DropConnectionAsync(string name, string database = null, CancellationToken token = default);
`}
</CodeBlock>
</TabItem>

usage: 

<TabItem value="connection_dropping" label="connection_dropping">
<CodeBlock language="csharp">
{`store.Subscriptions.DropConnection(subscriptionName);
`}
</CodeBlock>
</TabItem>



## Disabling subscription
<Admonition type="info" title="Info">
This operation can only be performed through the management studio
</Admonition>


## Updating subscription
<Admonition type="info" title="Info">
This operation can only be performed through the management studio
</Admonition>


## Getting subscription status

<TabItem value="interface_subscription_state" label="interface_subscription_state">
<CodeBlock language="csharp">
{`SubscriptionState GetSubscriptionState(string subscriptionName, string database = null);
Task<SubscriptionState> GetSubscriptionStateAsync(string subscriptionName, string database = null, CancellationToken token = default);
`}
</CodeBlock>
</TabItem>

usage: 

<TabItem value="subscription_state" label="subscription_state">
<CodeBlock language="csharp">
{`var subscriptionState = store.Subscriptions.GetSubscriptionState(subscriptionName);
`}
</CodeBlock>
</TabItem>

<Admonition type="info" title="SubscriptionState" id="subscriptionstate" href="#subscriptionstate">

| Member | Type | Description |
|--------|:-----|-------------| 
| **Query** | `string` | Subscription's RQL like query. |
| **LastBatchAckTime** | `DateTime?` | Last time a batch processing progress was acknowledged. |
| **NodeTag** | `string` | Processing server's node tag |
| **MentorNode** | `string` | The mentor node that was manually set. |
| **SubscriptionName** | `string` | Subscription's name, and also it's unique identifier |
| **SubscriptionId** | `long` | Subscription's internal identifier (cluster's operation etag during subscription creation) |
| **ChangeVectorForNextBatchStartingPoint** | `string` | Change vector, starting from which the subscription will send documents. This value is updated manually, or automatically on batch acknowledgment  |
| **Disabled** | `bool` | If true, subscription will not allow workers to connect |
| **LastClientConnectionTime** | `DateTime?` | Time when last client was connected (value sustained after disconnection) |                

</Admonition>



## DocumentSubscriptions class
The `DocumentSubscriptions` class is the class that manages all interaction with the data subscriptions.  
The class is available through `DocumentStore`'s `Subscriptions` property.

| Method Signature| Return type | Description |
|--------|:---|-------------| 
| **Create&lt;T&gt;(SubscriptionCreationOptions&lt;T&gt; options, string database)** | `string` | Creates a new data subscription. |
| **Create(SubscriptionCreationOptions criteria, string database)** | `string` | Creates a new data subscription. |
| **Create(SubscriptionCreationOptions criteria, string database)** | `string` | Creates a new data subscription. |
| **CreateAsync&lt;T&gt;(SubscriptionCreationOptions&lt;T&gt; options, string database)** | `Task<string>` | Creates a new data subscription. |
| **CreateAsync&lt;T&gt;(Expression&lt;Func&lt;T, bool&gt;&gt; predicate, SubscriptionCreationOptions options, string database)** | `Task<string>` | Creates a new data subscription. |
| **Delete(string name, string database)** | `void` | Deletes subscription. |
| **DeleteAsync(string name, string database)** | `Task` | Deletes subscription. |
| **DropConnection(string name, string database)** | `void` | Drops existing subscription connection with worker. |
| **DropConnectionAsync(string name, string database)** | `Task` | Drops existing subscription connection with worker. |
| **GetSubscriptions(int start, int take, string database)** | `List<SubscriptionState>` | Returns subscriptions list. |
| **GetSubscriptionsAsync(int start, int take, string database)** | `Task<List<SubscriptionState>>` | Returns subscriptions list. |
| **GetSubscriptionState(string subscriptionName, string database)** | `SubscriptionState ` | Get specific subscription state. |
| **GetSubscriptionStateAsync(string subscriptionName, string database)** | `Task<SubscriptionState> ` | Get specific subscription state. |
| **GetSubscriptionWorker&lt;T&gt;(string subscriptionName, string database)** | `SubscriptionWorker<T>` | Generates a subscription worker, using default configurations, that processes documents deserialized to `T` type . |
| **GetSubscriptionWorker(string subscriptionName, string database)** | `SubscriptionWorker<dynamic>` | Generates a subscription worker, using default configurations, that processes documents in it's raw `BlittableJsonReader`, wrapped by dynamic object. |
| **GetSubscriptionWorker(SubscriptionWorkerOptions options, string database)** | `SubscriptionWorker<T>` | Generates a subscription worker, using default configurations, that processes documents deserialized to `T` type . |
| **GetSubscriptionWorker(SubscriptionWorkerOptions options, string database)** | `SubscriptionWorker<dynamic>` | Generates a subscription worker, using default configurations, that processes documents in it's raw `BlittableJsonReader`, wrapped by dynamic object. |




</LanguageContent>
<LanguageContent language="java">

<Admonition type="note" title="Note">

This page covers data subscriptions maintenance operations:  

[Deletion](../../../client-api/data-subscriptions/advanced-topics/maintenance-operations.mdx#deletion)  
[Dropping Connection](../../../client-api/data-subscriptions/advanced-topics/maintenance-operations.mdx#dropping-connection)  
[Disabling subscription](../../../client-api/data-subscriptions/advanced-topics/maintenance-operations.mdx#disabling-subscription)  
[Updating subscription](../../../client-api/data-subscriptions/advanced-topics/maintenance-operations.mdx#updating-subscription)  
[Getting subscription status](../../../client-api/data-subscriptions/advanced-topics/maintenance-operations.mdx#getting-subscription-status)  
[DocumentSubscriptions class](../../../client-api/data-subscriptions/advanced-topics/maintenance-operations.mdx#documentsubscriptions-class)  

</Admonition>
## Deletion
Subscriptions can be entirely deleted from the system.  

This operation can be very useful in ad-hoc subscription scenarios when a lot of subscriptions tasks information may accumulate, making tasks management very hard.  

<TabItem value="interface_subscription_deletion" label="interface_subscription_deletion">
<CodeBlock language="java">
{`void delete(String name);

void delete(String name, String database);
`}
</CodeBlock>
</TabItem>

usage: 

<TabItem value="subscription_deletion" label="subscription_deletion">
<CodeBlock language="java">
{`store.subscriptions().delete(subscriptionName);
`}
</CodeBlock>
</TabItem>


    
## Dropping connection

Subscription connections with workers can be dropped remotely.  
A dropped worker will not try to reconnect to the server.

<TabItem value="interface_subscription_dropping" label="interface_subscription_dropping">
<CodeBlock language="java">
{`void dropConnection(String name);

void dropConnection(String name, String database);
`}
</CodeBlock>
</TabItem>

usage: 

<TabItem value="connection_dropping" label="connection_dropping">
<CodeBlock language="java">
{`store.subscriptions().dropConnection(subscriptionName);
`}
</CodeBlock>
</TabItem>



## Disabling subscription
<Admonition type="info" title="Info">
This operation can only be performed through the management studio
</Admonition>


## Updating subscription
<Admonition type="info" title="Info">
This operation can only be performed through the management studio
</Admonition>


## Getting subscription status

<TabItem value="interface_subscription_state" label="interface_subscription_state">
<CodeBlock language="java">
{`SubscriptionState getSubscriptionState(String subscriptionName);

SubscriptionState getSubscriptionState(String subscriptionName, String database);
`}
</CodeBlock>
</TabItem>

usage: 

<TabItem value="subscription_state" label="subscription_state">
<CodeBlock language="java">
{`SubscriptionState subscriptionState = store.subscriptions().getSubscriptionState(subscriptionName);
`}
</CodeBlock>
</TabItem>

<Admonition type="info" title="SubscriptionState" id="subscriptionstate" href="#subscriptionstate">

| Member | Type | Description |
|--------|:-----|-------------| 
| **query** | `String` | Subscription's RQL like query. |
| **lastBatchAckTime** | `Date` | Last time a batch processing progress was acknowledged. |
| **nodeTag** | `String` | Processing server's node tag |
| **mentorNode** | `String` | The mentor node that was manually set. |
| **subscriptionName** | `String` | Subscription's name, and also it's unique identifier |
| **subscriptionId** | `long` | Subscription's internal identifier (cluster's operation etag during subscription creation) |
| **changeVectorForNextBatchStartingPoint** | `String` | Change vector, starting from which the subscription will send documents. This value is updated manually, or automatically on batch acknowledgment  |
| **disabled** | `boolean` | If true, subscription will not allow workers to connect |
| **lastClientConnectionTime** | `Date` | Time when last client was connected (value sustained after disconnection) |

</Admonition>



## DocumentSubscriptions class
The `DocumentSubscriptions` class is the class that manages all interaction with the data subscriptions. 
The class is available through `DocumentStore`'s `subscriptions()` method.

| Method Signature| Return type | Description |
|--------|:---|-------------| 
| **create(SubscriptionCreationOptions options)** | `String` | Creates a new data subscription. |
| **create(SubscriptionCreationOptions options, String database)** | `String` | Creates a new data subscription. |
| **create(SubscriptionCreationOptions options)** | `String` | Creates a new data subscription. |
| **create(Class&lt;T&gt; clazz)** | `String` | Creates a new data subscription. |
| **create(Class&lt;T&gt; clazz, SubscriptionCreationOptions options)** | `String` | Creates a new data subscription. |
| **create(Class&lt;T&gt; clazz, SubscriptionCreationOptions options, String database)** | `String` | Creates a new data subscription. |
| **createForRevisions(Class&lt;T&gt; clazz)** | `String` | Creates a new data subscription. |
| **createForRevisions(Class&lt;T&gt; clazz, SubscriptionCreationOptions options)** | `String` | Creates a new data subscription. |
| **createForRevisions(Class&lt;T&gt; clazz, SubscriptionCreationOptions options, String database)** | `String` | Creates a new data subscription. |
| **delete(String name)** | `void` | Deletes subscription. |
| **delete(String name, String database)** | `void` | Deletes subscription. |
| **dropConnection(String name)** | `void` | Drops existing subscription connection with worker. |
| **dropConnection(String name, String database)** | `void` | Drops existing subscription connection with worker. |
| **getSubscriptions(int start, int take)** | `List<SubscriptionState>` | Returns subscriptions list. |
| **getSubscriptions(int start, int take, String database)** | `List<SubscriptionState>` | Returns subscriptions list. |
| **getSubscriptionState(String subscriptionName)** | `SubscriptionState ` | Get specific subscription state. |
| **getSubscriptionState(String subscriptionName, String database)** | `SubscriptionState ` | Get specific subscription state. |
| **getSubscriptionWorker(string subscriptionName)** | `SubscriptionWorker<ObjectNode>` | Generates a subscription worker, using default configurations, that processes documents in it's raw `ObjectNode` type . |
| **getSubscriptionWorker(string subscriptionName, String database)** | `SubscriptionWorker<ObjectNode>` | Generates a subscription worker, using default configurations, that processes documents in it's raw `ObjectNode` type . |
| **getSubscriptionWorker(SubscriptionWorkerOptions options)** | `SubscriptionWorker<ObjectNode>` | Generates a subscription worker, using default configurations, that processes documents in it's raw `ObjectNode` type . |
| **getSubscriptionWorker(SubscriptionWorkerOptions options, String database)** | `SubscriptionWorker<ObjectNode>` | Generates a subscription worker, using default configurations, that processes documents in it's raw `ObjectNode` type . |
| **getSubscriptionWorker&lt;T&gt;(Class&lt;T&gt; clazz, String subscriptionName)** | `SubscriptionWorker<T>` | Generates a subscription worker, using default configurations, that processes documents deserialized to `T` type . |
| **getSubscriptionWorker&lt;T&gt;(Class&lt;T&gt; clazz, String subscriptionName, String database)** | `SubscriptionWorker<T>` | Generates a subscription worker, using default configurations, that processes documents deserialized to `T` type . |
| **getSubscriptionWorker&lt;T&gt;(Class&lt;T&gt; clazz, SubscriptionWorkerOptions options)** | `SubscriptionWorker<T>` | Generates a subscription worker, using provided configuration, that processes documents deserialized to `T` type . |
| **getSubscriptionWorker&lt;T&gt;(Class&lt;T&gt; clazz, SubscriptionWorkerOptions options, String database)** | `SubscriptionWorker<T>` | Generates a subscription worker, using provided configuration, that processes documents deserialized to `T` type . |
| **getSubscriptionWorkerForRevisions&lt;T&gt;(Class&lt;T&gt; clazz, String subscriptionName)** | `SubscriptionWorker<Revision<T>>` | Generates a subscription worker, using default configurations, that processes documents deserialized to `T` type . |
| **getSubscriptionWorkerForRevisions&lt;T&gt;(Class&lt;T&gt; clazz, String subscriptionName, String database)** | `SubscriptionWorker<Revision<T>>` | Generates a subscription worker, using default configurations, that processes documents deserialized to `T` type . |
| **getSubscriptionWorkerForRevisions&lt;T&gt;(Class&lt;T&gt; clazz, SubscriptionWorkerOptions options)** | `SubscriptionWorker<Revision<T>>` | Generates a subscription worker, using provided configuration, that processes documents deserialized to `T` type . |
| **getSubscriptionWorkerForRevisions&lt;T&gt;(Class&lt;T&gt; clazz, SubscriptionWorkerOptions options, String database)** | `SubscriptionWorker<Revision<T>>` | Generates a subscription worker, using provided configuration, that processes documents deserialized to `T` type . |




</LanguageContent>

<!---
### Data Subscriptions:
- [What are Data Subscriptions](../../../client-api/data-subscriptions/what-are-data-subscriptions)
- [How to Create a Data Subscription](../../../client-api/data-subscriptions/creation/how-to-create-data-subscription)
- [How to Consume a Data Subscription](../../../client-api/data-subscriptions/consumption/how-to-consume-data-subscription)


-->